--- a/backend/TODO
+++ b/backend/TODO
@@ -1,1 +1,4 @@
+- propagate go pkg path to go type impl
+- ensure that importing self package does not produce import statements or aliases
+
 - move errors in common package
