remove Deps methods

--- a/TODO
+++ b/TODO
@@ -2,11 +2,10 @@ POST-MVP
 - [ ] pick an official name for the project
 
 HOUSE CLEANING
-- [ ] remove Deps() method from types
 - [ ] simplify structure, inductive, union, etc. (use slices)
 - [ ] rename pkg def to defs
 - [ ] rename interface def.Type to defs.Def
-
+- [ ] unified ci
 
 ROBUST COMPILER ARCHITECTURE
 - [ ] create a distinct plan representation layer
