--- a/TODO
+++ b/TODO
@@ -3,6 +3,8 @@ POST-MVP
 
 HOUSE CLEANING
 - [ ] unified ci
+- [ ] Map type must also parse IPLD maps to enable generic ingestion of IPLD data model kinds
+- [ ] verify implementation of Any decodes any IPLD data model value
 
 ROBUST COMPILER ARCHITECTURE
 - [ ] decouple preparation of blue values from source generation
